// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activate User with token 1`] = `
Object {
  "data": Object {
    "activateUser": true,
  },
}
`;

exports[`Activate User with wrong, or expired, token 1`] = `
Object {
  "data": Object {
    "activateUser": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "message": "jwt malformed",
          "name": "JsonWebTokenError",
        },
      },
      "locations": Array [
        Object {
          "column": 28,
          "line": 1,
        },
      ],
      "message": "jwt malformed",
      "path": Array [
        "activateUser",
      ],
    },
  ],
}
`;

exports[`Add user 1`] = `
Object {
  "data": Object {
    "addUser": Object {
      "email": "email",
      "id": Any<String>,
      "isEmailContactAllowed": true,
      "names": "names",
      "password": Any<String>,
      "surnames": "surnames",
    },
  },
}
`;

exports[`Change password with token 1`] = `
Object {
  "data": Object {
    "changePasswordWithToken": true,
  },
}
`;

exports[`Change password with wrong, or expired, token 1`] = `
Object {
  "data": Object {
    "changePasswordWithToken": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "message": "jwt malformed",
          "name": "JsonWebTokenError",
        },
      },
      "locations": Array [
        Object {
          "column": 47,
          "line": 1,
        },
      ],
      "message": "jwt malformed",
      "path": Array [
        "changePasswordWithToken",
      ],
    },
  ],
}
`;

exports[`Check existing user existence 1`] = `
Object {
  "data": Object {
    "doesUserExists": true,
  },
}
`;

exports[`Check non existing user existence 1`] = `
Object {
  "data": Object {
    "doesUserExists": false,
  },
}
`;

exports[`Login with user and incorrect password 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "locations": Array [
        Object {
          "column": 44,
          "line": 1,
        },
      ],
      "message": "Invalid password",
      "path": Array [
        "login",
      ],
    },
  ],
}
`;

exports[`Login with user and password 1`] = `
Object {
  "data": Object {
    "login": Any<String>,
  },
}
`;

exports[`Login with user and password, but deactivated 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "PERSISTED_QUERY_NOT_FOUND",
      },
      "locations": Array [
        Object {
          "column": 44,
          "line": 1,
        },
      ],
      "message": "PersistedQueryNotFound",
      "path": Array [
        "login",
      ],
    },
  ],
}
`;

exports[`Request password recovery 1`] = `
Object {
  "data": Object {
    "requestPasswordRecoveryUrlOverEmail": true,
  },
}
`;

exports[`Request password recovery with nonexistent email 1`] = `
Object {
  "data": Object {
    "requestPasswordRecoveryUrlOverEmail": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "PERSISTED_QUERY_NOT_FOUND",
      },
      "locations": Array [
        Object {
          "column": 25,
          "line": 1,
        },
      ],
      "message": "PersistedQueryNotFound",
      "path": Array [
        "requestPasswordRecoveryUrlOverEmail",
      ],
    },
  ],
}
`;

exports[`Request user activation 1`] = `
Object {
  "data": Object {
    "requestUserActivationUrlOverEmail": true,
  },
}
`;

exports[`Request user activation with nonexistent email 1`] = `
Object {
  "data": Object {
    "requestUserActivationUrlOverEmail": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "PERSISTED_QUERY_NOT_FOUND",
      },
      "locations": Array [
        Object {
          "column": 25,
          "line": 1,
        },
      ],
      "message": "PersistedQueryNotFound",
      "path": Array [
        "requestUserActivationUrlOverEmail",
      ],
    },
  ],
}
`;
